--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,56 @@
 /*-------*/
 
 /*----GENERAL----*/
+
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'DePixel', Arial, Helvetica, sans-serif;
+
+}
+
+main{
+    height: 100vh;
+    padding-top: 50px;
+}
+
+.form-container {
+    width: 700px;
+    height: 100px;
+    margin: 0 auto ;
+}
+
+.my-container{
+    width: 700px;
+    min-height: 700px;
+    margin: 100px auto;
 }
 
 .cell{
-    aspect-ratio: 1;
     text-align: center;
     border: 1px solid gray;
     background-color: bisque;
     position: relative;
     
+}
+
+.cell.cell-10{
+
+    width:calc(700px / 10) ;
+    height:calc(700px / 10) ;
+    
+}
+
+.cell.cell-9{
+
+    width:calc(700px / 9) ;
+    height:calc(700px / 9) ;
+
+}
+
+.cell.cell-7{
+
+    width:calc(700px / 7) ;
+    height:calc(700px / 7) ;
+
 }
 
 .content{
@@ -29,6 +68,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.content::selection{
+    background-color: transparent;
+}
 
 
 .cell.active{
@@ -37,4 +79,71 @@
 
 .cell.bomb{
     background-color: red;
+}
+
+.overlay-top{
+    position:absolute;
+    top: 0;
+    left: 0;
+    background-color: grey;
+    width: 100%;
+    border: 2px solid lightgray;
+    height: 50%;
+    transition: height 0.3s ;
+}
+
+.overlay-bottom{
+    position:absolute;
+    bottom: 0;
+    right: 0;
+    background-color: grey;
+    width: 100%;
+    height: 50%;
+    transform: rotate(180deg);
+    border: 2px solid lightgray;
+    transition: height 0.3s ;
+}
+
+.overlay-top.collapse, .overlay-bottom.collapse{
+    height: 0%;
+
+}
+
+.trigger{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.end-game{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+}
+
+.game-over{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    text-shadow: -1px -1px 1px red,-2px -2px 1px red,-3px -3px 1px red,-4px -4px 1px red;
+    color: yellow;
+}
+
+.end-game.show{
+    display: block;
+}
+
+#restart{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 60%;
+    left: 50%;
 }
