--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,29 @@
 main{
     height: 100vh;
     padding-top: 50px;
+
+    background-image: url(../img/background.webp);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .form-container {
+
+
     width: 700px;
     height: 100px;
     margin: 0 auto ;
+}
+
+.form-container label{
+    color: whitesmoke;
+    text-shadow: -1px -1px 1px rgb(237, 206, 6);
+
+}
+
+#grid-generator{
+    cursor: pointer;
 }
 
 .my-container{
@@ -60,13 +77,18 @@ main{
 }
 
 .content{
-    width: 3rem;
-    height: 3rem;
-    line-height: 3rem;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.content > img{
+    display: block;
+    width: 100%;
+    object-fit: scale-down;
+    
 }
 .content::selection{
     background-color: transparent;
@@ -104,7 +126,7 @@ main{
     transition: height 0.3s ;
 }
 
-.overlay-top.collapse, .overlay-bottom.collapse{
+.overlay-top.my-collapse, .overlay-bottom.my-collapse{
     height: 0%;
 
 }
@@ -146,4 +168,5 @@ main{
     transform: translate(-50%, -50%);
     top: 60%;
     left: 50%;
+    cursor: pointer;
 }
